@@ -674,6 +674,11 @@ extern rl_getc_func_t *rl_getc_function;
 
 extern rl_voidfunc_t *rl_redisplay_function;
 
+/* begin_clink_change */
+extern const char *_rl_display_input_color;
+extern const char *_rl_display_modmark_color;
+/* end_clink_change */
+
 extern rl_vintfunc_t *rl_prep_term_function;
 extern rl_voidfunc_t *rl_deprep_term_function;
 
